# fund-monitor

./: --help  .breadth_history.json  .briefing_fund.html  .dockerignore  .env.example  .gitattributes  .gitignore  .global_cache.json  CLAUDE.md  Dockerfile  README.md  _check.js  _debug_mail.py  config.json  config.py  docker-compose.yml  email_template.html  email_template.mjml  fund_alerts.py  fund_list.json  fund_manage.html  fund_manage.py  fund_metrics.py  fund_monitor.py  fund_recommend.py  fund_render.py  fund_scoring.py  fund_server.py  fund_utils.py  fund_watch.py  global_briefing.py  install_task.ps1  package-lock.json  pyproject.toml  reasonix.toml  requirements-dev.txt  run.bat  run.sh  tmp_home.html  tmp_home_utf8.html  (+1 more)
.github/: copilot-instructions.md
data/: config.json  fund_list.json
deploy/: README.md  fund-monitor.service  fund-monitor.timer  fund-watch.service  fund-watch.timer  global-briefing.service  global-briefing.timer  install.sh
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  recommend-flow.md
prompts/: system.md
scripts/: check_newer_data.py  check_syntax.js  check_td.py  check_td2.py  debug_reload.py  debug_reload2.py  fgl_period.py  find_fgl_date.py  find_fgl_date2.py  find_td_api.py  install_task.ps1  temp_check_final.js  temp_check_fixed.js  test_encoding.py  test_full_pipeline.py  test_holdings_debug.py  test_raw_response.py  test_spawn.py  test_syntax.js  test_syntax2.js  test_td_api.py
src/: __init__.py  config.py  fund_manage.py  fund_monitor.py  fund_recommend.py  fund_render.py  fund_scoring.py  (+4 more)
(+24 files in other folders)
